tests/paczka1/fuzzy1/84832980.err
Error in line 1: 8njQiXKUVP S617 62,0
Error in line 11: A69 S617 61,1
Error in line 12: A69 A731 33,7
Error in line 15: A69 S111 99,2
Error in line 8: dCsR A69 22,5
Error in line 20: dCsR A731 10,6
Error in line 25: A69 S617 39,2
Error in line 24: hfvZ3Nqfgc S617 44,1
